과제에 필요한 데이터 모두 정리함

--- a/assignment2/assignment.ipynb
+++ b/assignment2/assignment.ipynb
@@ -526,13 +526,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 55,
    "metadata": {},
    "outputs": [
@@ -685,9 +678,7 @@
     "u_user = []\n",
     "with open(\"./ml-100k/u.user\",'r',encoding='UTF-8') as f:\n",
     "    for line in f.readlines():\n",
-    "        u_user.append(line.strip().split(\"|\")) #README에서 item의 컬럼은 20개 였으나 해당 데이터에는 24개의 컬럼이 존재하여 4개의 컬럼을 제외시켰습니다.\n",
-    "        \n",
-    "\n",
+    "        u_user.append(line.strip().split(\"|\")) \n",
     "        \n",
     "user_info = \"\"\"user id | age | gender | occupation | zip code\"\"\"        \n",
     "        \n",
@@ -695,6 +686,200 @@
     "\n",
     "u_user = pd.DataFrame(u_user,columns=user_info)\n",
     "u_user"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     genre_name genre_ID\n",
+      "0       unknown        0\n",
+      "1        Action        1\n",
+      "2     Adventure        2\n",
+      "3     Animation        3\n",
+      "4    Children's        4\n",
+      "5        Comedy        5\n",
+      "6         Crime        6\n",
+      "7   Documentary        7\n",
+      "8         Drama        8\n",
+      "9       Fantasy        9\n",
+      "10    Film-Noir       10\n",
+      "11       Horror       11\n",
+      "12      Musical       12\n",
+      "13      Mystery       13\n",
+      "14      Romance       14\n",
+      "15       Sci-Fi       15\n",
+      "16     Thriller       16\n",
+      "17          War       17\n",
+      "18      Western       18\n",
+      "19                  None\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>job</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>administrator</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>artist</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>doctor</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>educator</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>engineer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>entertainment</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>executive</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>healthcare</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>homemaker</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>lawyer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>librarian</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>marketing</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>none</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>other</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>programmer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>retired</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>salesman</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>scientist</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>student</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>technician</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>writer</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              job\n",
+       "0   administrator\n",
+       "1          artist\n",
+       "2          doctor\n",
+       "3        educator\n",
+       "4        engineer\n",
+       "5   entertainment\n",
+       "6       executive\n",
+       "7      healthcare\n",
+       "8       homemaker\n",
+       "9          lawyer\n",
+       "10      librarian\n",
+       "11      marketing\n",
+       "12           none\n",
+       "13          other\n",
+       "14     programmer\n",
+       "15        retired\n",
+       "16       salesman\n",
+       "17      scientist\n",
+       "18        student\n",
+       "19     technician\n",
+       "20         writer"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#u.genre ->dataframe으로 변경\n",
+    "genre=[]\n",
+    "with open(\"./ml-100k/u.genre\",'r',encoding='UTF-8') as f:\n",
+    "    for line in f.readlines():\n",
+    "        genre.append(line.strip().split(\"|\")) \n",
+    "genre = pd.DataFrame(genre,columns=[\"genre_name\",\"genre_ID\"]) #어차피 Index와 Genre_ID가 같음 나중에 없애봐\n",
+    "print(genre)\n",
+    "\n",
+    "#u.occupation-> dataframe으로 변경\n",
+    "occupation =[]\n",
+    "with open(\"./ml-100k/u.occupation\", 'r',encoding='UTF-8') as f:\n",
+    "    for line in f.readlines():\n",
+    "        occupation.append(line.strip().split(\"|\"))\n",
+    "        \n",
+    "occupation = pd.DataFrame(occupation,columns=[\"job\"])\n",
+    "occupation"
    ]
   },
   {
