2-A(가장 시청률이 높은 영화 100개) 완료

--- a/assignment2/assignment.ipynb
+++ b/assignment2/assignment.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
        "4    166    346      1  886397596"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 104,
    "metadata": {
     "scrolled": true
    },
@@ -498,7 +498,7 @@
        "[1682 rows x 20 columns]"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -508,7 +508,7 @@
     "u_item = []\n",
     "with open(\"./ml-100k/u.item\",'r',encoding='ISO-8859-1') as f:\n",
     "    for line in f.readlines():\n",
-    "        u_item.append(line.strip().split(\"|\")[:-4]) #README에서 item의 컬럼은 20개 였으나 해당 데이터에는 24개의 컬럼이 존재하여 4개의 컬럼을 제외시켰습니다.\n",
+    "        u_item.append(line.strip().split(\"|\")[:-4]) #README에서 item의 컬럼은 20개 였으나 해당 데이터에는 24개의 컬럼이 존재하여 4개의 컬럼을 제외시켰습니다\n",
     "        \n",
     "\n",
     "        \n",
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -668,7 +668,7 @@
        "[943 rows x 5 columns]"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -858,7 +858,7 @@
        "20         writer"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -884,120 +884,162 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 134,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>itemID</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>50</th>\n",
-       "      <td>583</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>258</th>\n",
-       "      <td>509</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>100</th>\n",
-       "      <td>508</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>181</th>\n",
-       "      <td>507</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>294</th>\n",
-       "      <td>485</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1352</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1636</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1637</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1638</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1669</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1682 rows × 1 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "          0\n",
-       "itemID     \n",
-       "50      583\n",
-       "258     509\n",
-       "100     508\n",
-       "181     507\n",
-       "294     485\n",
-       "...     ...\n",
-       "1352      1\n",
-       "1636      1\n",
-       "1637      1\n",
-       "1638      1\n",
-       "1669      1\n",
-       "\n",
-       "[1682 rows x 1 columns]"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1. 전체 사용자에서 가장 시청률이 높은 영화 TOP 100\n",
+      "\n",
+      "1등 영화 제목 : Star Wars (1977)\n",
+      "2등 영화 제목 : Contact (1997)\n",
+      "3등 영화 제목 : Fargo (1996)\n",
+      "4등 영화 제목 : Return of the Jedi (1983)\n",
+      "5등 영화 제목 : Liar Liar (1997)\n",
+      "6등 영화 제목 : English Patient, The (1996)\n",
+      "7등 영화 제목 : Scream (1996)\n",
+      "8등 영화 제목 : Toy Story (1995)\n",
+      "9등 영화 제목 : Air Force One (1997)\n",
+      "10등 영화 제목 : Independence Day (ID4) (1996)\n",
+      "11등 영화 제목 : Raiders of the Lost Ark (1981)\n",
+      "12등 영화 제목 : Godfather, The (1972)\n",
+      "13등 영화 제목 : Pulp Fiction (1994)\n",
+      "14등 영화 제목 : Twelve Monkeys (1995)\n",
+      "15등 영화 제목 : Silence of the Lambs, The (1991)\n",
+      "16등 영화 제목 : Jerry Maguire (1996)\n",
+      "17등 영화 제목 : Rock, The (1996)\n",
+      "18등 영화 제목 : Empire Strikes Back, The (1980)\n",
+      "19등 영화 제목 : Star Trek: First Contact (1996)\n",
+      "20등 영화 제목 : Back to the Future (1985)\n",
+      "21등 영화 제목 : Titanic (1997)\n",
+      "22등 영화 제목 : Mission: Impossible (1996)\n",
+      "23등 영화 제목 : Fugitive, The (1993)\n",
+      "24등 영화 제목 : Indiana Jones and the Last Crusade (1989)\n",
+      "25등 영화 제목 : Willy Wonka and the Chocolate Factory (1971)\n",
+      "26등 영화 제목 : Princess Bride, The (1987)\n",
+      "27등 영화 제목 : Forrest Gump (1994)\n",
+      "28등 영화 제목 : Saint, The (1997)\n",
+      "29등 영화 제목 : Monty Python and the Holy Grail (1974)\n",
+      "30등 영화 제목 : Full Monty, The (1997)\n",
+      "31등 영화 제목 : Men in Black (1997)\n",
+      "32등 영화 제목 : Terminator, The (1984)\n",
+      "33등 영화 제목 : E.T. the Extra-Terrestrial (1982)\n",
+      "34등 영화 제목 : Dead Man Walking (1995)\n",
+      "35등 영화 제목 : Schindler's List (1993)\n",
+      "36등 영화 제목 : Leaving Las Vegas (1995)\n",
+      "37등 영화 제목 : L.A. Confidential (1997)\n",
+      "38등 영화 제목 : Braveheart (1995)\n",
+      "39등 영화 제목 : Conspiracy Theory (1997)\n",
+      "40등 영화 제목 : Terminator 2: Judgment Day (1991)\n",
+      "41등 영화 제목 : Mr. Holland's Opus (1995)\n",
+      "42등 영화 제목 : Birdcage, The (1996)\n",
+      "43등 영화 제목 : Twister (1996)\n",
+      "44등 영화 제목 : Alien (1979)\n",
+      "45등 영화 제목 : When Harry Met Sally... (1989)\n",
+      "46등 영화 제목 : Aliens (1986)\n",
+      "47등 영화 제목 : Shawshank Redemption, The (1994)\n",
+      "48등 영화 제목 : Jaws (1975)\n",
+      "49등 영화 제목 : Groundhog Day (1993)\n",
+      "50등 영화 제목 : Amadeus (1984)\n",
+      "51등 영화 제목 : Apollo 13 (1995)\n",
+      "52등 영화 제목 : Blade Runner (1982)\n",
+      "53등 영화 제목 : Truth About Cats & Dogs, The (1996)\n",
+      "54등 영화 제목 : Sense and Sensibility (1995)\n",
+      "55등 영화 제목 : Usual Suspects, The (1995)\n",
+      "56등 영화 제목 : Ransom (1996)\n",
+      "57등 영화 제목 : One Flew Over the Cuckoo's Nest (1975)\n",
+      "58등 영화 제목 : Jurassic Park (1993)\n",
+      "59등 영화 제목 : 2001: A Space Odyssey (1968)\n",
+      "60등 영화 제목 : Evita (1996)\n",
+      "61등 영화 제목 : Raising Arizona (1987)\n",
+      "62등 영화 제목 : Dances with Wolves (1990)\n",
+      "63등 영화 제목 : Chasing Amy (1997)\n",
+      "64등 영화 제목 : Broken Arrow (1996)\n",
+      "65등 영화 제목 : Dead Poets Society (1989)\n",
+      "66등 영화 제목 : Blues Brothers, The (1980)\n",
+      "67등 영화 제목 : Four Weddings and a Funeral (1994)\n",
+      "68등 영화 제목 : Game, The (1997)\n",
+      "69등 영화 제목 : Trainspotting (1996)\n",
+      "70등 영화 제목 : Fish Called Wanda, A (1988)\n",
+      "71등 영화 제목 : Wizard of Oz, The (1939)\n",
+      "72등 영화 제목 : Phenomenon (1996)\n",
+      "73등 영화 제목 : Star Trek: The Wrath of Khan (1982)\n",
+      "74등 영화 제목 : Die Hard (1988)\n",
+      "75등 영화 제목 : Casablanca (1942)\n",
+      "76등 영화 제목 : Sting, The (1973)\n",
+      "77등 영화 제목 : Dante's Peak (1997)\n",
+      "78등 영화 제목 : Devil's Own, The (1997)\n",
+      "79등 영화 제목 : Graduate, The (1967)\n",
+      "80등 영화 제목 : Psycho (1960)\n",
+      "81등 영화 제목 : Seven (Se7en) (1995)\n",
+      "82등 영화 제목 : Time to Kill, A (1996)\n",
+      "83등 영화 제목 : It's a Wonderful Life (1946)\n",
+      "84등 영화 제목 : In & Out (1997)\n",
+      "85등 영화 제목 : Speed (1994)\n",
+      "86등 영화 제목 : Hunt for Red October, The (1990)\n",
+      "87등 영화 제목 : Stand by Me (1986)\n",
+      "88등 영화 제목 : GoodFellas (1990)\n",
+      "89등 영화 제목 : Heat (1995)\n",
+      "90등 영화 제목 : Sound of Music, The (1965)\n",
+      "91등 영화 제목 : Clockwork Orange, A (1971)\n",
+      "92등 영화 제목 : Apocalypse Now (1979)\n",
+      "93등 영화 제목 : Courage Under Fire (1996)\n",
+      "94등 영화 제목 : Top Gun (1986)\n",
+      "95등 영화 제목 : Lion King, The (1994)\n",
+      "96등 영화 제목 : Volcano (1997)\n",
+      "97등 영화 제목 : Aladdin (1992)\n",
+      "98등 영화 제목 : To Kill a Mockingbird (1962)\n",
+      "99등 영화 제목 : Babe (1995)\n",
+      "100등 영화 제목 : Murder at 1600 (1997)\n"
+     ]
     }
    ],
    "source": [
     "# 1.전체이용자에서 가장 시청률이 높은 영화 TOP 100\n",
     "result = u_data.value_counts(subset=\"itemID\", ascending=False)\n",
     "\n",
-    "\n",
     "result = pd.DataFrame(result)\n",
-    "result"
+    "top_id = result.index[:100] #영화 TOP 100 ID\n",
+    "\n",
+    "print(\"1. 전체 사용자에서 가장 시청률이 높은 영화 TOP 100\\n\")\n",
+    "\n",
+    "for idx in range(100):\n",
+    "    name =  u_item.loc[u_item['movie id']==top_id[idx],\"movie title\"].values[0]\n",
+    "    print(\"{0}등 영화 제목 : {1}\".format(idx+1,name))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    Toy Story (1995)\n",
+       "Name: movie title, dtype: object"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#u_item[u_item['itemID'] == '71']\n",
+    "u_item.loc[u_item['movie id']=='1',\"movie title\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
