2-1(gender에서 가장 시청률이 높은 영화 TOP 100)  완료

--- a/assignment2/assignment.ipynb
+++ b/assignment2/assignment.ipynb
@@ -1005,7 +1005,7 @@
     "result = pd.DataFrame(result)\n",
     "top_id = result.index[:100] #영화 TOP 100 ID\n",
     "\n",
-    "print(\"1. 전체 사용자에서 가장 시청률이 높은 영화 TOP 100\\n\")\n",
+    "print(\"1. 전체 사용자에게 가장 시청률이 높은 영화 TOP 100\\n\")\n",
     "\n",
     "for idx in range(100):\n",
     "    name =  u_item.loc[u_item['movie id']==top_id[idx],\"movie title\"].values[0]\n",
@@ -1014,32 +1014,253 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0    Toy Story (1995)\n",
-       "Name: movie title, dtype: object"
-      ]
-     },
-     "execution_count": 113,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1. 여자 사용자에서 가장 시청률이 높은 영화 TOP 100\n",
+      "\n",
+      "1등 영화 제목 : English Patient, The (1996)\n",
+      "2등 영화 제목 : Star Wars (1977)\n",
+      "3등 영화 제목 : Scream (1996)\n",
+      "4등 영화 제목 : Liar Liar (1997)\n",
+      "5등 영화 제목 : Contact (1997)\n",
+      "6등 영화 제목 : Air Force One (1997)\n",
+      "7등 영화 제목 : Fargo (1996)\n",
+      "8등 영화 제목 : Return of the Jedi (1983)\n",
+      "9등 영화 제목 : Toy Story (1995)\n",
+      "10등 영화 제목 : Jerry Maguire (1996)\n",
+      "11등 영화 제목 : Independence Day (ID4) (1996)\n",
+      "12등 영화 제목 : Godfather, The (1972)\n",
+      "13등 영화 제목 : Titanic (1997)\n",
+      "14등 영화 제목 : Silence of the Lambs, The (1991)\n",
+      "15등 영화 제목 : Full Monty, The (1997)\n",
+      "16등 영화 제목 : Truth About Cats & Dogs, The (1996)\n",
+      "17등 영화 제목 : Sense and Sensibility (1995)\n",
+      "18등 영화 제목 : Raiders of the Lost Ark (1981)\n",
+      "19등 영화 제목 : Willy Wonka and the Chocolate Factory (1971)\n",
+      "20등 영화 제목 : Mr. Holland's Opus (1995)\n",
+      "21등 영화 제목 : Empire Strikes Back, The (1980)\n",
+      "22등 영화 제목 : Rock, The (1996)\n",
+      "23등 영화 제목 : Back to the Future (1985)\n",
+      "24등 영화 제목 : Princess Bride, The (1987)\n",
+      "25등 영화 제목 : Birdcage, The (1996)\n",
+      "26등 영화 제목 : When Harry Met Sally... (1989)\n",
+      "27등 영화 제목 : E.T. the Extra-Terrestrial (1982)\n",
+      "28등 영화 제목 : Conspiracy Theory (1997)\n",
+      "29등 영화 제목 : Saint, The (1997)\n",
+      "30등 영화 제목 : Pulp Fiction (1994)\n",
+      "31등 영화 제목 : Twister (1996)\n",
+      "32등 영화 제목 : Evita (1996)\n",
+      "33등 영화 제목 : Dead Man Walking (1995)\n",
+      "34등 영화 제목 : Twelve Monkeys (1995)\n",
+      "35등 영화 제목 : Men in Black (1997)\n",
+      "36등 영화 제목 : Schindler's List (1993)\n",
+      "37등 영화 제목 : Forrest Gump (1994)\n",
+      "38등 영화 제목 : Indiana Jones and the Last Crusade (1989)\n",
+      "39등 영화 제목 : Mission: Impossible (1996)\n",
+      "40등 영화 제목 : Amadeus (1984)\n",
+      "41등 영화 제목 : L.A. Confidential (1997)\n",
+      "42등 영화 제목 : In & Out (1997)\n",
+      "43등 영화 제목 : Sound of Music, The (1965)\n",
+      "44등 영화 제목 : Leaving Las Vegas (1995)\n",
+      "45등 영화 제목 : Dante's Peak (1997)\n",
+      "46등 영화 제목 : Star Trek: First Contact (1996)\n",
+      "47등 영화 제목 : Phenomenon (1996)\n",
+      "48등 영화 제목 : Fugitive, The (1993)\n",
+      "49등 영화 제목 : Ransom (1996)\n",
+      "50등 영화 제목 : Devil's Own, The (1997)\n",
+      "51등 영화 제목 : Wizard of Oz, The (1939)\n",
+      "52등 영화 제목 : To Kill a Mockingbird (1962)\n",
+      "53등 영화 제목 : Emma (1996)\n",
+      "54등 영화 제목 : Dances with Wolves (1990)\n",
+      "55등 영화 제목 : Sleepless in Seattle (1993)\n",
+      "56등 영화 제목 : Groundhog Day (1993)\n",
+      "57등 영화 제목 : Monty Python and the Holy Grail (1974)\n",
+      "58등 영화 제목 : Lion King, The (1994)\n",
+      "59등 영화 제목 : Apollo 13 (1995)\n",
+      "60등 영화 제목 : Fish Called Wanda, A (1988)\n",
+      "61등 영화 제목 : Dead Poets Society (1989)\n",
+      "62등 영화 제목 : Graduate, The (1967)\n",
+      "63등 영화 제목 : Jaws (1975)\n",
+      "64등 영화 제목 : Sabrina (1995)\n",
+      "65등 영화 제목 : Shawshank Redemption, The (1994)\n",
+      "66등 영화 제목 : Braveheart (1995)\n",
+      "67등 영화 제목 : Time to Kill, A (1996)\n",
+      "68등 영화 제목 : Four Weddings and a Funeral (1994)\n",
+      "69등 영화 제목 : Stand by Me (1986)\n",
+      "70등 영화 제목 : Psycho (1960)\n",
+      "71등 영화 제목 : Game, The (1997)\n",
+      "72등 영화 제목 : Jurassic Park (1993)\n",
+      "73등 영화 제목 : Murder at 1600 (1997)\n",
+      "74등 영화 제목 : Chasing Amy (1997)\n",
+      "75등 영화 제목 : Terminator, The (1984)\n",
+      "76등 영화 제목 : Beauty and the Beast (1991)\n",
+      "77등 영화 제목 : Field of Dreams (1989)\n",
+      "78등 영화 제목 : One Flew Over the Cuckoo's Nest (1975)\n",
+      "79등 영화 제목 : Babe (1995)\n",
+      "80등 영화 제목 : Ghost (1990)\n",
+      "81등 영화 제목 : Good Will Hunting (1997)\n",
+      "82등 영화 제목 : First Wives Club, The (1996)\n",
+      "83등 영화 제목 : My Best Friend's Wedding (1997)\n",
+      "84등 영화 제목 : Raising Arizona (1987)\n",
+      "85등 영화 제목 : Courage Under Fire (1996)\n",
+      "86등 영화 제목 : Aladdin (1992)\n",
+      "87등 영화 제목 : It's a Wonderful Life (1946)\n",
+      "88등 영화 제목 : While You Were Sleeping (1995)\n",
+      "89등 영화 제목 : Fried Green Tomatoes (1991)\n",
+      "90등 영화 제목 : Sting, The (1973)\n",
+      "91등 영화 제목 : 2001: A Space Odyssey (1968)\n",
+      "92등 영화 제목 : Mother (1996)\n",
+      "93등 영화 제목 : Mary Poppins (1964)\n",
+      "94등 영화 제목 : Grease (1978)\n",
+      "95등 영화 제목 : Everyone Says I Love You (1996)\n",
+      "96등 영화 제목 : Alien (1979)\n",
+      "97등 영화 제목 : Casablanca (1942)\n",
+      "98등 영화 제목 : Seven Years in Tibet (1997)\n",
+      "99등 영화 제목 : Postino, Il (1994)\n",
+      "100등 영화 제목 : Fly Away Home (1996)\n",
+      "\n",
+      "1. 남자 사용자에서 가장 시청률이 높은 영화 TOP 100\n",
+      "\n",
+      "1등 영화 제목 : Star Wars (1977)\n",
+      "2등 영화 제목 : Return of the Jedi (1983)\n",
+      "3등 영화 제목 : Fargo (1996)\n",
+      "4등 영화 제목 : Contact (1997)\n",
+      "5등 영화 제목 : Liar Liar (1997)\n",
+      "6등 영화 제목 : Scream (1996)\n",
+      "7등 영화 제목 : Toy Story (1995)\n",
+      "8등 영화 제목 : English Patient, The (1996)\n",
+      "9등 영화 제목 : Raiders of the Lost Ark (1981)\n",
+      "10등 영화 제목 : Independence Day (ID4) (1996)\n",
+      "11등 영화 제목 : Pulp Fiction (1994)\n",
+      "12등 영화 제목 : Twelve Monkeys (1995)\n",
+      "13등 영화 제목 : Godfather, The (1972)\n",
+      "14등 영화 제목 : Air Force One (1997)\n",
+      "15등 영화 제목 : Star Trek: First Contact (1996)\n",
+      "16등 영화 제목 : Silence of the Lambs, The (1991)\n",
+      "17등 영화 제목 : Rock, The (1996)\n",
+      "18등 영화 제목 : Empire Strikes Back, The (1980)\n",
+      "19등 영화 제목 : Jerry Maguire (1996)\n",
+      "20등 영화 제목 : Mission: Impossible (1996)\n",
+      "21등 영화 제목 : Fugitive, The (1993)\n",
+      "22등 영화 제목 : Back to the Future (1985)\n",
+      "23등 영화 제목 : Indiana Jones and the Last Crusade (1989)\n",
+      "24등 영화 제목 : Monty Python and the Holy Grail (1974)\n",
+      "25등 영화 제목 : Titanic (1997)\n",
+      "26등 영화 제목 : Forrest Gump (1994)\n",
+      "27등 영화 제목 : Terminator 2: Judgment Day (1991)\n",
+      "28등 영화 제목 : Terminator, The (1984)\n",
+      "29등 영화 제목 : Alien (1979)\n",
+      "30등 영화 제목 : Princess Bride, The (1987)\n",
+      "31등 영화 제목 : Braveheart (1995)\n",
+      "32등 영화 제목 : Willy Wonka and the Chocolate Factory (1971)\n",
+      "33등 영화 제목 : Saint, The (1997)\n",
+      "34등 영화 제목 : Aliens (1986)\n",
+      "35등 영화 제목 : Blade Runner (1982)\n",
+      "36등 영화 제목 : Leaving Las Vegas (1995)\n",
+      "37등 영화 제목 : Men in Black (1997)\n",
+      "38등 영화 제목 : L.A. Confidential (1997)\n",
+      "39등 영화 제목 : Shawshank Redemption, The (1994)\n",
+      "40등 영화 제목 : Schindler's List (1993)\n",
+      "41등 영화 제목 : Full Monty, The (1997)\n",
+      "42등 영화 제목 : Dead Man Walking (1995)\n",
+      "43등 영화 제목 : Jaws (1975)\n",
+      "44등 영화 제목 : Usual Suspects, The (1995)\n",
+      "45등 영화 제목 : E.T. the Extra-Terrestrial (1982)\n",
+      "46등 영화 제목 : Groundhog Day (1993)\n",
+      "47등 영화 제목 : Apollo 13 (1995)\n",
+      "48등 영화 제목 : Twister (1996)\n",
+      "49등 영화 제목 : Conspiracy Theory (1997)\n",
+      "50등 영화 제목 : Blues Brothers, The (1980)\n",
+      "51등 영화 제목 : Birdcage, The (1996)\n",
+      "52등 영화 제목 : One Flew Over the Cuckoo's Nest (1975)\n",
+      "53등 영화 제목 : When Harry Met Sally... (1989)\n",
+      "54등 영화 제목 : Broken Arrow (1996)\n",
+      "55등 영화 제목 : 2001: A Space Odyssey (1968)\n",
+      "56등 영화 제목 : Mr. Holland's Opus (1995)\n",
+      "57등 영화 제목 : Trainspotting (1996)\n",
+      "58등 영화 제목 : Jurassic Park (1993)\n",
+      "59등 영화 제목 : Amadeus (1984)\n",
+      "60등 영화 제목 : Raising Arizona (1987)\n",
+      "61등 영화 제목 : Star Trek: The Wrath of Khan (1982)\n",
+      "62등 영화 제목 : Die Hard (1988)\n",
+      "63등 영화 제목 : Ransom (1996)\n",
+      "64등 영화 제목 : Chasing Amy (1997)\n",
+      "65등 영화 제목 : Game, The (1997)\n",
+      "66등 영화 제목 : Four Weddings and a Funeral (1994)\n",
+      "67등 영화 제목 : Casablanca (1942)\n",
+      "68등 영화 제목 : GoodFellas (1990)\n",
+      "69등 영화 제목 : Dances with Wolves (1990)\n",
+      "70등 영화 제목 : Dead Poets Society (1989)\n",
+      "71등 영화 제목 : Hunt for Red October, The (1990)\n",
+      "72등 영화 제목 : Heat (1995)\n",
+      "73등 영화 제목 : Sting, The (1973)\n",
+      "74등 영화 제목 : Seven (Se7en) (1995)\n",
+      "75등 영화 제목 : Apocalypse Now (1979)\n",
+      "76등 영화 제목 : Fish Called Wanda, A (1988)\n",
+      "77등 영화 제목 : Clockwork Orange, A (1971)\n",
+      "78등 영화 제목 : Speed (1994)\n",
+      "79등 영화 제목 : Wizard of Oz, The (1939)\n",
+      "80등 영화 제목 : Psycho (1960)\n",
+      "81등 영화 제목 : Evita (1996)\n",
+      "82등 영화 제목 : Starship Troopers (1997)\n",
+      "83등 영화 제목 : Truth About Cats & Dogs, The (1996)\n",
+      "84등 영화 제목 : Graduate, The (1967)\n",
+      "85등 영화 제목 : Brazil (1985)\n",
+      "86등 영화 제목 : Mars Attacks! (1996)\n",
+      "87등 영화 제목 : Sense and Sensibility (1995)\n",
+      "88등 영화 제목 : Phenomenon (1996)\n",
+      "89등 영화 제목 : It's a Wonderful Life (1946)\n",
+      "90등 영화 제목 : Top Gun (1986)\n",
+      "91등 영화 제목 : Butch Cassidy and the Sundance Kid (1969)\n",
+      "92등 영화 제목 : Dr. Strangelove or: How I Learned to Stop Worrying and Love the Bomb (1963)\n",
+      "93등 영화 제목 : Godfather: Part II, The (1974)\n",
+      "94등 영화 제목 : Devil's Own, The (1997)\n",
+      "95등 영화 제목 : Time to Kill, A (1996)\n",
+      "96등 영화 제목 : Dante's Peak (1997)\n",
+      "97등 영화 제목 : Stand by Me (1986)\n",
+      "98등 영화 제목 : Volcano (1997)\n",
+      "99등 영화 제목 : People vs. Larry Flynt, The (1996)\n",
+      "100등 영화 제목 : True Lies (1994)\n"
+     ]
     }
    ],
    "source": [
-    "#u_item[u_item['itemID'] == '71']\n",
-    "u_item.loc[u_item['movie id']=='1',\"movie title\"]"
+    "# 2. gender를 기준으로 시청률이 높은 영화 TOP100\n",
+    "\n",
+    "#간소화한 user_data를 만든다. (user_id, gender만 포험함 데이터 셋)\n",
+    "gender_user = u_user.loc[:,[\"user id\",\"gender\"]]\n",
+    "#u_data와 column명을 맞추기 위해 바꿔준다.\n",
+    "gender_user.columns = [\"userID\" , \"gender\"]\n",
+    "\n",
+    "#gender_user와 u_data를 inner joing한다.\n",
+    "join_data = pd.merge(u_data, gender_user)\n",
+    "join_data.head()\n",
+    "\n",
+    "#1. 여자만 따로 빼내기\n",
+    "F_join = join_data.loc[join_data['gender']=='F']\n",
+    "F_result = F_join.value_counts(subset=\"itemID\", ascending=False).index[:100]\n",
+    "\n",
+    "print(\"1. 여자 사용자에게 가장 시청률이 높은 영화 TOP 100\\n\")\n",
+    "\n",
+    "for idx in range(100):\n",
+    "    name =  u_item.loc[u_item['movie id']==F_result[idx],\"movie title\"].values[0]\n",
+    "    print(\"{0}등 영화 제목 : {1}\".format(idx+1,name))\n",
+    "    \n",
+    "#2. 남자만 따로 뺴내기\n",
+    "M_join = join_data.loc[join_data['gender']=='M']\n",
+    "M_result = M_join.value_counts(subset=\"itemID\", ascending=False).index[:100]\n",
+    "\n",
+    "print(\"\\n1. 남자 사용자에게 가장 시청률이 높은 영화 TOP 100\\n\")\n",
+    "\n",
+    "for idx in range(100):\n",
+    "    name =  u_item.loc[u_item['movie id']==M_result[idx],\"movie title\"].values[0]\n",
+    "    print(\"{0}등 영화 제목 : {1}\".format(idx+1,name))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
